fix: correct Node.js cache path in GitHub Actions workflows
- Update cache-dependency-path from src/package-lock.json to package-lock.json
- Fixes npm caching error where specified paths were not resolved
- Applies to ci.yml, quality.yml, and format.yml workflows

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: src/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -85,7 +85,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: src/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
