--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -254,38 +254,40 @@ jobs:
           cache-to: type=gha,mode=max
 
   # Dependency Scanning
-  dependency-scan:
-    name: Dependency Security Scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+dependency-scan:
+  name: Dependency Security Scan
+  runs-on: ubuntu-latest
 
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'fs'
-          scan-ref: '.'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-        continue-on-error: true
+  permissions:
+    contents: read
+    security-events: write
 
-      - name: Check if Trivy results exist
-        id: check_trivy
-        run: |
-          if [ -f 'trivy-results.sarif' ]; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-          else
-            echo "exists=false" >> $GITHUB_OUTPUT
-            echo "Trivy SARIF file not found, creating empty file"
-            echo '{"version": "2.1.0", "$schema": "https://json.schemastore.org/sarif-2.1.0.json", "runs": []}' > trivy-results.sarif
-          fi
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v4
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
+    - name: Run Trivy vulnerability scanner (FS → SARIF)
+      uses: aquasecurity/trivy-action@0.20.0
+      with:
+        scan-type: fs
+        format: sarif
+        output: trivy-results.sarif
+        severity: CRITICAL,HIGH
+        exit-code: 0
+
+    - name: Verify SARIF output
+      run: |
+        if [ ! -s trivy-results.sarif ]; then
+          echo "❌ Trivy SARIF file missing or empty"
+          ls -lah
+          exit 1
+        fi
+
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v4
+      with:
+        sarif_file: trivy-results.sarif
+        wait-for-processing: true
 
   # Integration Tests
   integration-test:
