--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -40,89 +40,95 @@ jobs:
           category: "/language:${{matrix.language}}"
 
   # Container Security Scanning
-  container-scan:
-    name: Container Security Scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+container-scan:
+  name: Container Security Scan
+  runs-on: ubuntu-latest
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  permissions:
+    contents: read
+    security-events: write
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: false
-          load: true
-          tags: ctxos:test
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: 'ctxos:test'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-        continue-on-error: true
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Check if Trivy results exist
-        id: check_trivy_container
-        run: |
-          if [ -f 'trivy-results.sarif' ]; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-          else
-            echo "exists=false" >> $GITHUB_OUTPUT
-            echo "Trivy SARIF file not found, creating empty file"
-            echo '{"version": "2.1.0", "$schema": "https://json.schemastore.org/sarif-2.1.0.json", "runs": []}' > trivy-results.sarif
-          fi
+    - name: Build Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        load: true
+        tags: ctxos:test
 
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v4
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
+    - name: Run Trivy image scan → SARIF
+      uses: aquasecurity/trivy-action@0.20.0
+      with:
+        scan-type: image
+        image-ref: ctxos:test
+        format: sarif
+        output: trivy-container.sarif
+        severity: CRITICAL,HIGH
+        exit-code: 0
 
-  # Secret Scanning
-  secret-scan:
-    name: Secret Scanning
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+    - name: Verify SARIF output
+      run: |
+        if [ ! -s trivy-container.sarif ]; then
+          echo "❌ Container SARIF missing or empty"
+          ls -lah
+          exit 1
+        fi
 
-      - name: Run Trivy secret scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'config'
-          scan-ref: '.'
-          format: 'sarif'
-          output: 'trivy-secrets.sarif'
-        continue-on-error: true
+    - name: Upload container scan results
+      uses: github/codeql-action/upload-sarif@v4
+      with:
+        sarif_file: trivy-container.sarif
+        wait-for-processing: true
 
-      - name: Check if Trivy secret results exist
-        id: check_trivy_secrets
-        run: |
-          if [ -f 'trivy-secrets.sarif' ]; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-          else
-            echo "exists=false" >> $GITHUB_OUTPUT
-            echo "Trivy secrets SARIF file not found, creating empty file"
-            echo '{"version": "2.1.0", "$schema": "https://json.schemastore.org/sarif-2.1.0.json", "runs": []}' > trivy-secrets.sarif
-          fi
 
-      - name: Run Gitleaks
-        uses: gitleaks/gitleaks-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# Secret Scanning
+secret-scan:
+  name: Secret Scanning
+  runs-on: ubuntu-latest
 
-      - name: Upload secret scan results
-        uses: github/codeql-action/upload-sarif@v4
-        if: always()
-        with:
-          sarif_file: 'trivy-secrets.sarif'
+  permissions:
+    contents: read
+    security-events: write
+
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Run Trivy secret scan → SARIF
+      uses: aquasecurity/trivy-action@0.20.0
+      with:
+        scan-type: fs
+        scanners: secret
+        format: sarif
+        output: trivy-secrets.sarif
+        exit-code: 0
+
+    - name: Verify SARIF output
+      run: |
+        if [ ! -s trivy-secrets.sarif ]; then
+          echo "❌ Secret SARIF missing or empty"
+          ls -lah
+          exit 1
+        fi
+
+    - name: Upload Trivy secret scan results
+      uses: github/codeql-action/upload-sarif@v4
+      with:
+        sarif_file: trivy-secrets.sarif
+        wait-for-processing: true
+
+    - name: Run Gitleaks (blocking)
+      uses: gitleaks/gitleaks-action@v2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   # Dependency Security Scanning
   dependency-scan:
