--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -240,25 +240,25 @@ jobs:
           directory: .
           framework: dockerfile,kubernetes,terraform
           output: sarif
-          output_file_path: checkov-results.sarif
+          output_file_path: checkov-sarif-results
         continue-on-error: true
 
       - name: Check if Checkov results exist
         id: check_checkov
         run: |
-          if [ -f 'checkov-results.sarif' ]; then
+          if [ -f 'checkov-sarif-results/results.sarif' ]; then
             echo "exists=true" >> $GITHUB_OUTPUT
           else
             echo "exists=false" >> $GITHUB_OUTPUT
             echo "Checkov SARIF file not found, creating empty file"
-            echo '{"version": "2.1.0", "$schema": "https://json.schemastore.org/sarif-2.1.0.json", "runs": []}' > checkov-results.sarif
+            echo '{"version": "2.1.0", "$schema": "https://json.schemastore.org/sarif-2.1.0.json", "runs": []}' > checkov-sarif-results/results.sarif
           fi
 
       - name: Upload Checkov results
         uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
-          sarif_file: 'checkov-results.sarif'
+          sarif_file: 'checkov-sarif-results/results.sarif'
 
   # Security Policy and Compliance
   compliance:
